--- a/main.html
+++ b/main.html
@@ -10,6 +10,36 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form method="post" action = "mailto:pravinshivajiptil37@gmail.com">
+		<lable for = "name">Name : </lable>
+		    <input type="text" id = "name" name ="name" placeholder="Name" required><br><br>
+		<label for = "email"> Email : </label>
+			<input type ="email" id="email" name="email" placeholder="Email" required><br><br>
+		Gender : 
+		<label for ="gender_m" >
+			Male <input type ="radio" value="male" id ="gender_m" name="gender">
+		</lable>
+		<lable for ="gender_f">
+			Female <input type ="radio" value ="female" id ="gender_f" name="gender"><br><br>
+		</label>
+		<label for="cars">Car Brands : </label>
+			<select id ="cars" required>
+				 <Option value="">--Please choose an option--</Option>
+				<option>honda</option>
+				<option>BMW</option>
+			</select><br><br>
+		<label for="age">Age : </label>
+		<input type="number" id="age" name ="age" placeholder="Age" required><br><br>
+		<label for="dob">DOB : </label>
+		<input type="date" id="dob" name ="dob" required><br><br>
+		<label for="tel">Phone Number : </label>
+		<input type ="tel" id="tel" name ="tel" placeholder="xxx-xxx-xxxx"><br><br>
+		<label for="password">Password : </label>
+		<input type ="password" id="password" name = "password" placeholder="Password" required><br><br>
+		<label for="tos">I agree to the TOS : </label>
+		<input type = "checkbox" id="tos" name = "tos" required> YES <br><br>
+		<input type = "submit" value ="submit">
+	</form>
 
 </body>
 
