--- a/main.html
+++ b/main.html
@@ -17,10 +17,10 @@
 			<input type ="email" id="email" name="email" placeholder="Email" required><br><br>
 		Gender : 
 		<label for ="gender_m" >
-			Male <input type ="radio" value="male" id ="gender_m" name="gender">
+			<input type ="radio" value="male" id ="gender_m" name="gender" checked>Male
 		</lable>
 		<lable for ="gender_f">
-			Female <input type ="radio" value ="female" id ="gender_f" name="gender"><br><br>
+			<input type ="radio" value ="female" id ="gender_f" name="gender">Female<br><br>
 		</label>
 		<label for="cars">Car Brands : </label>
 			<select id ="cars" required>
