--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 
 		<label for="cars">Car Brands :</label>
 			<select id ="cars" required>
-				 <Option value="" aria-disabled>--Please choose an option--</Option>
+				 <Option value="">--Please choose an option--</Option>
 			</select><br><br>
 		
 		<label for="age">Age :</label>
