--- a/main.html
+++ b/main.html
@@ -27,6 +27,8 @@
 		<label for="cars">Car Brands :</label>
 			<select id ="cars" required>
 				 <Option value="">--Please choose an option--</Option>
+				<option>BMW</option>
+				<option>ODDY</option>
 			</select><br><br>
 		
 		<label for="age">Age :</label>
