--- a/main.html
+++ b/main.html
@@ -11,14 +11,13 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<form method="post" action = "mailto:pravinshivajiptil37@gmail.com">
-		
 		<lable for = "name">Name :</lable>
 		    <input type="text" id = "name" name ="name" placeholder="Name" required><br><br>
 		
 		<label for = "email"> Email :</label>
 			<input type ="email" id="email" name="email" placeholder="Email" required><br><br>
 		
-		<label>Gender:</label>
+		<a>Gender :</a>
         <input type="radio" id="gender_m" name="gender" required>
         <label for="gender_m">Male</label>
         <input type="radio" id="gender_f" name="gender" required>
@@ -28,7 +27,7 @@
 			<select id ="cars" required>
 				 <Option value="">--Please choose an option--</Option>
 				<option>BMW</option>
-				<option>ODDY</option>
+				<option>HONDA</option>
 			</select><br><br>
 		
 		<label for="age">Age :</label>
