--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<label for = "email"> Email :</label>
 			<input type ="email" id="email" name="email" placeholder="Email" required><br><br>
 		
-		<a>Gender :</a>
+		Gender :
         <input type="radio" id="gender_m" name="gender" required>
         <label for="gender_m">Male</label>
         <input type="radio" id="gender_f" name="gender" required>
@@ -37,7 +37,7 @@
 		<input type="date" id="dob" name ="dob" required><br><br>
 		
 		<label for="tel">Phone Number : </label>
-		<input type ="tel" id="tel" name ="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="xxx-xxx-xxxx"><br><br>
+		<input type ="tel" id="tel" name ="tel" pattern="[0-9]{10}" placeholder="xxx-xxx-xxxx"><br><br>
 		
 		<label for="password">Password : </label>
 		<input type ="password" id="password" name = "password" placeholder="Password" required><br><br>
