--- a/main.html
+++ b/main.html
@@ -12,38 +12,38 @@
 </script>
 	<form method="post" action = "mailto:pravinshivajiptil37@gmail.com">
 		<lable for = "name">Name :</lable>
-		    <input type="text" id = "name" name ="name" placeholder="Name" required><br><br>
+		    <input type="text" id = "name" name ="name" placeholder="Name" required><br>
 		
 		<label for = "email"> Email :</label>
-			<input type ="email" id="email" name="email" placeholder="Email" required><br><br>
+			<input type ="email" id="email" name="email" placeholder="Email" required><br>
 		
 		Gender :
         <input type="radio" id="gender_m" name="gender" required>
         <label for="gender_m">Male</label>
         <input type="radio" id="gender_f" name="gender" required>
-        <label for="gender_f">Female</label><br><br>
+        <label for="gender_f">Female</label><br>
 
 		<label for="cars">Car Brands :</label>
 			<select id ="cars" required>
 				 <Option value="">--Please choose an option--</Option>
 				<option>BMW</option>
 				<option>HONDA</option>
-			</select><br><br>
+			</select><br>
 		
 		<label for="age">Age :</label>
-		<input type="number" id="age" name ="age" placeholder="Age" required><br><br>
+		<input type="number" id="age" name ="age" placeholder="Age" required><br>
 		
 		<label for="dob">DOB :</label>
-		<input type="date" id="dob" name ="dob" required><br><br>
+		<input type="date" id="dob" name ="dob" required><br>
 		
 		<label for="tel">Phone Number : </label>
-		<input type ="tel" id="tel" name ="tel" pattern="[0-9]{10}" placeholder="xxx-xxx-xxxx"><br><br>
+		<input type ="tel" id="tel" name ="tel" pattern="[0-9]{10}" placeholder="xxx-xxx-xxxx"><br>
 		
 		<label for="password">Password : </label>
-		<input type ="password" id="password" name = "password" placeholder="Password" required><br><br>
+		<input type ="password" id="password" name = "password" placeholder="Password" required><br>
 		
 		<label for="tos">I agree to the TOS : </label>
-		<input type = "checkbox" id="tos" name = "tos" required><br><br>
+		<input type = "checkbox" id="tos" name = "tos" required><br>
 		
 		<button type="submit">Submit</button>
 	</form>
