--- a/main.html
+++ b/main.html
@@ -18,9 +18,9 @@
 			<input type ="email" id="email" name="email" placeholder="Email" required><br>
 		
 		Gender :
-        <input type="radio" id="gender_m" name="gender" required>
+        <input type="radio" id="gender_m" value="Male" name="gender" required>
         <label for="gender_m">Male</label>
-        <input type="radio" id="gender_f" name="gender" required>
+        <input type="radio" id="gender_f" value = "Female" name="gender" required>
         <label for="gender_f">Female</label><br>
 
 		<label for="cars">Car Brands :</label>
