--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 		<input type ="password" id="password" name = "password" placeholder="Password" required><br>
 		
 		<label for="tos">I agree to the TOS : </label>
-		<input type = "checkbox" id="tos" name = "tos" required><br>
+		<input type = "checkbox" id="tos" value="Yes" name = "tos" required><br>
 		
 		<button type="submit">Submit</button>
 	</form>
