--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
 		<label for="cars">Car Brands :</label>
 			<select id ="cars" required>
 				 <Option value="">--Please choose an option--</Option>
-				<option>BMW</option>
-				<option>HONDA</option>
+<!-- 				<option>BMW</option>
+				<option>HONDA</option> -->
 			</select><br>
 		
 		<label for="age">Age :</label>
