--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<label for = "email"> Email :</label>
 			<input type ="email" id="email" name="email" placeholder="Email" required><br>
 		
-		Gender :
+		<label>Gender :</label>
         <input type="radio" id="gender_m" value="Male" name="gender" required>
         <label for="gender_m">Male</label>
         <input type="radio" id="gender_f" value = "Female" name="gender" required>
@@ -25,9 +25,9 @@
 
 		<label for="cars">Car Brands :</label>
 			<select id ="cars" required>
-				 <Option value="">--Please choose an option--</Option>
-<!-- 				<option>BMW</option>
-				<option>HONDA</option> -->
+				 <option value="">--Please choose an option--</option>
+				<option>BMW</option>
+				<option>HONDA</option>
 			</select><br>
 		
 		<label for="age">Age :</label>
