--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 		<input type="date" id="dob" name ="dob" required><br>
 		
 		<label for="tel">Phone Number : </label>
-		<input type ="tel" id="tel" name ="tel" pattern="[0-9]{10}" placeholder="xxx-xxx-xxxx"><br>
+		<input type ="tel" id="tel" name ="tel"  placeholder="xxx-xxx-xxxx"><br>
 		
 		<label for="password">Password : </label>
 		<input type ="password" id="password" name = "password" placeholder="Password" required><br>
