--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
 		<label for="cars">Car Brands :</label>
 			<select id ="cars" required>
 				 <option value="">--Please choose an option--</option>
-				<option>BMW</option>
-				<option>HONDA</option>
+				<option value="BMW">BMW</option>
+				<option value="HONDA">HONDA</option>
 			</select><br>
 		
 		<label for="age">Age :</label>
