--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	<form method="post" action = "mailto:pravinshivajiptil37@gmail.com">
 		<lable for = "name">Name :</lable>
-		    <input type="text" id = "name" name ="name" placeholder="Name" required><br>
+		    <input type="text" id="name" name ="Name" placeholder="Name" required><br>
 		
 		<label for = "email"> Email :</label>
 			<input type ="email" id="email" name="email" placeholder="Email" required><br>
