--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<form method="post" action = "mailto:pravinshivajiptil37@gmail.com">
-		<labele for = "name">Name :</label>
+		<label for = "name">Name :</label>
 		    <input type="text" id="name" name ="Name" placeholder="Name" required><br>
 		
 		<label for = "email"> Email :</label>
